# BlackRiver

./: .gitignore  LICENSE  Makefile  README.md  br.cpp  computing.hpp  cpu_tensor.hpp  cuda_tensor.cpp  cuda_tensor.hpp  dag.cpp  dag.hpp  nn.cpp  tensortype-impl.hpp  tensortype.cpp  tensortype.hpp
blackriver/: Makefile  br.cpp  common.hpp  computing.cpp  context.cpp  context.hpp  cpu_tensor.cpp  cpu_tensor.hpp  cuda_tensor.cpp  cuda_tensor.hpp  dag.cpp  dag.hpp  nn.cpp  nn.hpp  operators.hpp  tensortype.cpp  tensortype.hpp  train_bloom.cpp
blackriver/kernels/: CMakeLists.txt  LtSgemmBatched.cu  block_reduce.h  common.h  gelu.cu  kernels.h  nll_loss.cu  normalize_kernels.cu  softmax_kernels.cu  transform_kernels.cu
bloomz-7b/: build_test.py  dump_weights.py  init.words  model.py  tobin.cpp  train.words
kernels/: cuda_util.h  gelu.cu  kernels.h  normalize_kernels.cu
